--- a/RecipeStore/Views/RecipeModels/Details.cshtml
+++ b/RecipeStore/Views/RecipeModels/Details.cshtml
@@ -19,12 +19,17 @@
 
         <p><strong>@Html.DisplayNameFor(model => model.Description)</strong> <br /> @Html.DisplayFor(model => model.Description)</p>
 
+        <p><strong>@Html.DisplayNameFor(model => model.Servings )</strong> <br /> @Html.DisplayFor(model => model.Servings)</p>
+
+        <p><strong>@Html.DisplayNameFor(model => model.Time )</strong> <br /> @Html.DisplayFor(model => model.Time)</p>
+
         <p><strong>@Html.DisplayNameFor(model => model.DateAdded)</strong> <br />@Html.DisplayFor(model => model.DateAdded)</p>
 
-        <p><strong>@Html.DisplayNameFor(model => model.Ingredients)</strong></p>
-        <ul>
-            <li>@Html.DisplayFor(model => model.Ingredients)</li>
-        </ul>
+        <p>
+            <strong>@Html.DisplayNameFor(model => model.Ingredients)</strong> <br />
+            @Html.DisplayFor(model => model.Ingredients)
+        </p>
+        
     </div>
 </div>
 <p>
