--- a/RecipeStore/Views/RecipeModels/Create.cshtml
+++ b/RecipeStore/Views/RecipeModels/Create.cshtml
@@ -13,55 +13,69 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>RecipeModel</h4>
-        <hr />
+        <h4>New Recipe</h4>
+ <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.RecipeItem.RecipeName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RecipeItem.RecipeName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RecipeItem.RecipeName, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.RecipeItem.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RecipeItem.Description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RecipeItem.Description, "", new { @class = "text-danger" })
+        <div class="col-md-5">
+            <div class="form-group">
+                @Html.LabelFor(model => model.RecipeItem.RecipeName, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.RecipeItem.RecipeName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.RecipeItem.RecipeName, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.CategoryItems, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.RecipeItem.Category.Id, RecipeStore.Controllers.RecipeCategoriesController.GetDropDownItems(), htmlAttributes: new { @class = "form-control" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.CategoryItems, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownListFor(model => model.RecipeItem.Category.Id, RecipeStore.Controllers.RecipeCategoriesController.GetDropDownItems(), htmlAttributes: new { @class = "form-control" })
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.RecipeItem.Time, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RecipeItem.Time, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RecipeItem.Time, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.RecipeItem.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.TextAreaFor(model => model.RecipeItem.Description, 5, 35, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.RecipeItem.Description, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.RecipeItem.Servings, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RecipeItem.Servings, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RecipeItem.Servings, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.RecipeItem.Ingredients, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.TextAreaFor(model => model.RecipeItem.Ingredients, 5, 35, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.RecipeItem.Ingredients, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
+            <div class="col-md-7">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.RecipeItem.Ingredients, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RecipeItem.Ingredients, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RecipeItem.Ingredients, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.RecipeItem.Servings, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.RecipeItem.Servings, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.RecipeItem.Servings, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.RecipeItem.Time, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.RecipeItem.Time, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.RecipeItem.Time, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.RecipeItem.PreparationInstructions, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.TextAreaFor(model => model.RecipeItem.PreparationInstructions, 10, 40, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.RecipeItem.PreparationInstructions, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            </div>
+
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -70,10 +84,10 @@
         </div>
     </div>
 }
-
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    <button class="btn btn-link"><span class="glyphicon glyphicon-chevron-left"></span> @Html.ActionLink("Back to List", "Index")</button>
 </div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
