--- a/RecipeStore/Views/RecipeModels/Delete.cshtml
+++ b/RecipeStore/Views/RecipeModels/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>RecipeModel</h4>
+    <h4>Recipe</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -19,20 +19,17 @@
             @Html.DisplayFor(model => model.RecipeName)
         </dd>
 
+        <dt>@Html.DisplayNameFor(model=>model.Category.CategoryName)</dt>
+        <dd>
+            @Html.DisplayFor(model=>model.Category.CategoryName)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Description)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Ingredients)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Ingredients)
         </dd>
 
         <dt>
@@ -49,8 +46,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <button class="btn btn-success white-text">@Html.ActionLink("Back to List", "Index")</button>
+            <input type="submit" value="Yes, Delete" class="btn btn-danger" />
         </div>
     }
 </div>
