--- a/RecipeStore/Views/RecipeModels/Details.cshtml
+++ b/RecipeStore/Views/RecipeModels/Details.cshtml
@@ -6,6 +6,9 @@
 
 <div class="page-header">
     <h1>@Html.DisplayFor(model => model.RecipeName) <small>@Html.DisplayFor(model=>model.Category.CategoryName)</small></h1>
+    <button class="btn btn-link"><span class="glyphicon glyphicon-chevron-left"></span> @Html.ActionLink("Back to List", "Index")</button>
+    <button class="btn btn-success white-text"><span class="glyphicon glyphicon-edit"></span> @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class = "white-text" })</button>
+    <button class="btn btn-danger white-text"><span class="glyphicon glyphicon-trash"></span> @Html.ActionLink("Delete", "Delete", new { id = Model.Id }, new { @class = "white-text" })</button>
 </div>
 
 <div class="col-md-6">
@@ -32,7 +35,4 @@
         
     </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
