--- a/RecipeStore/Views/RecipeModels/Index.cshtml
+++ b/RecipeStore/Views/RecipeModels/Index.cshtml
@@ -7,11 +7,11 @@
 <h2>Recipes</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <button class="btn btn-success white-text">@Html.ActionLink("Create New", "Create")</button>
+    <!-- Trigger modal for recipe from URL -->
+    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#createFromURL">Recipe from URL</button>
 </p>
 
-<!-- Trigger the modal with a button -->
-<button type="button" class="btn btn-info" data-toggle="modal" data-target="#createFromURL">Recipe from URL</button>
 
 <!-- Modal -->
 <div id="createFromURL" class="modal fade" role="dialog">
@@ -21,21 +21,26 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Modal Header</h4>
+                <h4 class="modal-title">Add new recipe from URL</h4>
             </div>
+            @using (
+@Html.BeginForm("CreateFromURL", "RecipeModels"))
+            {
+                
             <div class="modal-body">
-                <p>@{
+                @{
                     var categories = RecipeStore.Controllers.RecipeCategoriesController.GetDropDownItems();
-                    var newItem = new RecipeStore.Models.RecipeModelCategory();
-                    @Html.TextBox("URL");
-                    @Html.Display("Category");
-                    @Html.DropDownList("Select a category",RecipeStore.Controllers.RecipeCategoriesController.GetDropDownItems());
+                    <p>Please enter a URL: @Html.TextBox("URL", null, new { @class="form-control"})</p>
+                    <p>Pick a Category: @Html.DropDownList("Category", RecipeStore.Controllers.RecipeCategoriesController.GetDropDownItems(), new { @class="form-control"})</p>
+                    <p>Please enter a Description: @Html.TextArea("Description", new { @class = "form-control" })</p>
+                    <p>Please note, at the moment only recipes from Anabel Langbeins website work.</p>
                     }
-                 </p>
+                 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">@Html.ActionLink("Create Recipe from URL", "CreateFromURL")</button>
+                <input type="submit" value="Submit" class="btn btn-default"/>
             </div>
+                    }
         </div>
 
     </div>
