--- a/RecipeStore/Views/RecipeModels/Edit.cshtml
+++ b/RecipeStore/Views/RecipeModels/Edit.cshtml
@@ -12,7 +12,8 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>RecipeModel</h4>
+        <h2>@Html.DisplayFor(x=>x.RecipeItem.RecipeName)</h2>
+        <h3>@Html.DisplayFor(x=>x.RecipeItem.Category.CategoryName)</h3>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -41,7 +42,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.RecipeItem.Description, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.TextAreaFor(model => model.RecipeItem.Description, 5, 35, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.TextAreaFor(model => model.RecipeItem.Description, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.RecipeItem.Description, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -49,19 +50,20 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.RecipeItem.Ingredients, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.TextAreaFor(model => model.RecipeItem.Ingredients, 5,35, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.TextAreaFor(model => model.RecipeItem.Ingredients, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.RecipeItem.Ingredients, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
 
-
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-default" />
-                    </div>
+                    <button class="btn btn-danger white-text">@Html.ActionLink("Back", "Details", new { id = Model.RecipeItem.Id })</button>
+                    <input type="submit" value="Save" class="btn btn-success" />
                 </div>
+                
             </div>
+
+            
             <div class="col-md-7">
 
                 <div class="form-group">
@@ -88,17 +90,16 @@
                     </div>
                 </div>
             </div>
+
+            
+               
         </div>
     </div>
 
     
 }
 
-<div class="row">
-    <div class="form-group">
-        @Html.ActionLink("Back to List", "Index")
-    </div>
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
