--- a/RecipeStore/Views/RecipeModels/Index.cshtml
+++ b/RecipeStore/Views/RecipeModels/Index.cshtml
@@ -23,28 +23,73 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">Add new recipe from URL</h4>
             </div>
-            @using (
-@Html.BeginForm("CreateFromURL", "RecipeModels"))
-            {
-                
-            <div class="modal-body">
-                @{
-                    var categories = RecipeStore.Controllers.RecipeCategoriesController.GetDropDownItems();
-                    <p>Please enter a URL: @Html.TextBox("URL", null, new { @class="form-control"})</p>
-                    <p>Pick a Category: @Html.DropDownList("Category", RecipeStore.Controllers.RecipeCategoriesController.GetDropDownItems(), new { @class="form-control"})</p>
-                    <p>Please enter a Description: @Html.TextArea("Description", new { @class = "form-control" })</p>
-                    <p>Please note, at the moment only recipes from Anabel Langbeins website work.</p>
-                    }
+     <div class="modal-body">
+             <div>
+                 <button class="btn btn-info" data-toggle="collapse" data-target="#anabel-lang">Anabel Langbein</button>
+                 <button class="btn btn-info" data-toggle="collapse" data-target="#nadia-lim">Nadia Lim</button>
                  
-            </div>
-            <div class="modal-footer">
-                <input type="submit" value="Submit" class="btn btn-default"/>
-            </div>
-                    }
-        </div>
+                 <hr />
+                 <br />
+             </div>
 
+      <!-- Anabel Langbein -->
+      <div id="anabel-lang" class="collapse">
+            @using (
+            @Html.BeginForm("CreateFromURL", "RecipeModels"))
+            {
+
+                <div>
+                    @{
+                        var categories = RecipeStore.Controllers.RecipeCategoriesController.GetDropDownItems();
+                        <p>Please enter a URL: @Html.TextBox("URL", null, new { @class = "form-control" })</p>
+                            <p>Pick a Category: @Html.DropDownList("Category", RecipeStore.Controllers.RecipeCategoriesController.GetDropDownItems(), new { @class = "form-control" })</p>
+                            <p>Please enter a Description: @Html.TextArea("Description", new { @class = "form-control" })</p>
+                            @Html.Hidden("SiteName", "Annabel");
+                            
+                    }
+            
+            
+                </div>
+
+                <div class="modal-footer">
+                    <input type="submit" value="Submit" class="btn btn-default"/>
+                </div>
+             }
+      </div>
+            <!-- End of Anabel -->
+
+         <!-- Nadia -->
+         <div id="nadia-lim" class="collapse">
+             @using (
+           @Html.BeginForm("CreateFromURL", "RecipeModels"))
+             {
+
+                 <div>
+                     @{
+                         var categories = RecipeStore.Controllers.RecipeCategoriesController.GetDropDownItems();
+                         <p>Please enter a URL: @Html.TextBox("URL", null, new { @class = "form-control" })</p>
+                         <p>Pick a Category: @Html.DropDownList("Category", RecipeStore.Controllers.RecipeCategoriesController.GetDropDownItems(), new { @class = "form-control" })</p>
+                         <p>Please enter a Description: @Html.TextArea("Description", new { @class = "form-control" })</p>
+                         @Html.Hidden("SiteName", "Nadia");
+
+                     }
+
+
+                 </div>
+
+                 <div class="modal-footer">
+                     <input type="submit" value="Submit" class="btn btn-default" />
+                 </div>
+                         }
+         </div>
+         <!-- End of Nadia -->
+      </div>
+        </div>
+                
     </div>
 </div>
+<!-- End of URL modal -->
+
 <div class="row">
     @foreach (var item in Model)
     {
